@@ -2,8 +2,8 @@ Package: synbreed
 Type: Package
 Title: Framework for the analysis of genomic prediction data using R
 Version: 0.9-6
-Date: 2013-04-13
-Author: Valentin Wimmer, Theresa Albrecht, Hans-Juergen Auinger, Chris-Carolin Schoen with contributions by Larry Schaeffer, Malena Erbe, Ulrike Ober and Christian Reimer
+Date: 2013-06-07
+Author: Valentin Wimmer, Theresa Albrecht, Hans-Juergen Auinger, Chris-Carolin Schoen with contributions by Larry Schaeffer, Malena Erbe, Ulrike Ober, Christian Reimer and Yvonne Badke
 Depends: R (>= 2.14), doBy, BLR, regress (>= 1.3-8), abind, synbreedData (>= 1.3)
 Imports: lattice, igraph0, MASS, LDheatmap, qtl
 Maintainer: Valentin Wimmer <Valentin.Wimmer@tum.de>
